# pm-handbook

./: README.md  pyproject.toml
.github/workflows/: ci.yml
case-studies/examples/: sanitized-platform-rollout.md
playbooks/: ai-eval-rollout-workflow.md  ai-pm-discovery-workflow.md  decision-quality-checklist.md  weekly-operating-rhythm.md
templates/: ai-eval-scorecard-template.md  kpi-tree-template.md  launch-readiness-template.md  postmortem-template.md  prd-template.md  prioritization-scorecard-template.md  stakeholder-update-template.md  tradeoff-memo-template.md
tests/: test_generate_eval_scorecard.py  test_new_case_study.py  test_prioritize_features.py
tools/: __init__.py  generate_eval_scorecard.py  new_case_study.py  prioritize_features.py
